--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="headerlogo">
             <a href="index.html">
-                <img src="img/KindFood_logo.svg" alt="">
+                <img src="KindFood_logo.svg" alt="">
             </a>
         </div>
 
